--- a/collections.html
+++ b/collections.html
@@ -17,7 +17,14 @@
 
 </head>
 <body>
-
+     <!-- Popup Section -->
+     <section>
+      <div id="popup" class="pop-up flex justify-content-evenly" style="background-color: #1D232C;">
+        <h2 class="text-2xl font-bold text-white p-2" >Sign Up and GET 20% OFF for your first Order</h2>
+        <p id="closebtn" class="text-2xl font-bold text-white p-2">X</p>
+      </div>
+    </section>
+    
     <!-- Responsive navbar -->
     <nav class="bg-gray-200 p-4 flex items-center justify-between shadow-xl">
         <h1 class="font-bold text-2xl">Nostra</h1>
@@ -54,9 +61,9 @@
     </nav>
 
     <!-- Side navbar -->
-    <section id="sidenav" class="bg-gray-300 fixed z-20 top-0 left-0 transition-all duration-1000" style="width: 50%; height: 100vh; left: -50%;">
+    <section id="sidenav" class="bg-gray-300 fixed z-20 top-0 left-0 transition-all duration-1000" style=" background-color: #1D232C; width: 50%; height: 100vh; left: -50%;">
         <div class="text-right p-2">
-          <p id="closenav" class="inline cursor-pointer">X</p>
+          <p id="closenav" class="inline cursor-pointer text-white">X</p>
         </div>
         
         <ul class="flex flex-col gap-10 items-center text-gray-600">
@@ -109,7 +116,7 @@
                 </div>
                 <div class="collection_items">
                     <img class="productImg" src="./images/collec-4.jpg" alt="">
-                    <h3>Blue Beach Shirt</h3>
+                    <h3>Beach Shirt</h3>
                     <p>&#8377;349</p>
                 </div>
                 <div class="collection_items">
@@ -139,7 +146,7 @@
                 </div>
                 <div class="collection_items extra-item">
                     <img class="productImg" src="./images/collec-4.jpg" alt="">
-                    <h3>Blue Beach Shirt</h3>
+                    <h3>Beach Shirt</h3>
                     <p>&#8377;349</p>
                 </div>
 
