--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,9 @@
     </nav>
 
     <!-- side navbar -->
-    <section id="sidenav" class="bg-gray-300 fixed z-20 top-0 left-0 transition-all duration-1000" style="width: 50%; height: 100vh; left: -50%;">
+    <section id="sidenav" class="bg-gray-300 fixed z-20 top-0 left-0 transition-all duration-1000" style="background-color: #1D232C; width: 50%; height: 100vh; left: -50%;">
         <div class="text-right p-2">
-          <p id="closenav" class="inline cursor-pointer">X</p>
+          <p id="closenav" class="inline cursor-pointer text-white">X</p>
         </div>
         
         <ul class="flex flex-col gap-10 items-center text-gray-600">
