--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 
   </head>
   <body>
+    <!-- Popup Section -->
+    <section>
+      <div id="popup" class="pop-up flex justify-content-evenly" style="background-color: #1D232C;">
+        <h2 class="text-2xl font-bold text-white p-2" >Sign Up and GET 20% OFF for your first Order</h2>
+        <p id="closebtn" class="text-2xl font-bold text-white p-2">X</p>
+      </div>
+    </section>
+
     <!-- Responsive navbar -->
     <nav class="bg-gray-200 p-4 flex items-center justify-between shadow-xl">
       <h1 class="font-bold text-2xl">Nostra</h1>
@@ -57,7 +65,7 @@
     <!-- side navbar -->
     <section id="sidenav" class=" fixed z-20 top-0 left-0 transition-all duration-1000" style="background-color: #1D232C; width: 50%; height: 100vh; left: -50%;">
       <div class="text-right p-2">
-        <p id="closenav" class="inline cursor-pointer">X</p>
+        <p id="closenav" class="inline cursor-pointer text-white">X</p>
       </div>
       
       <ul class="flex flex-col gap-10 items-center text-white">
