--- a/collections.html
+++ b/collections.html
@@ -17,11 +17,11 @@
 
 </head>
 <body>
-     <!-- Popup Section -->
-     <section>
-      <div id="popup" class="pop-up flex justify-content-evenly" style="background-color: #1D232C;">
-        <h2 class="text-2xl font-bold text-white p-2" >Sign Up and GET 20% OFF for your first Order</h2>
-        <p id="closebtn" class="text-2xl font-bold text-white p-2">X</p>
+    <!-- Popup Section -->
+    <section>
+      <div id="popup" class="pop-up">
+        <h2>Sign Up and GET 20% OFF for your first Order</h2>
+        <p id="closebtn">X</p>
       </div>
     </section>
     
@@ -66,7 +66,7 @@
           <p id="closenav" class="inline cursor-pointer text-white">X</p>
         </div>
         
-        <ul class="flex flex-col gap-10 items-center text-gray-600">
+        <ul class="flex flex-col gap-10 items-center text-white">
           <li><a class="hover:underline hover:text-black" href="./index.html">Home</a></li>
           <li><a class="hover:underline hover:text-black" href="#NewArrivals">New Arrival</a></li>
           <li><a class="hover:underline hover:text-black" href="#MostWanted">Most Wanted</a></li>
