--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <body>
     <!-- Popup Section -->
     <section>
-      <div id="popup" class="pop-up flex justify-content-evenly" style="background-color: #1D232C;">
-        <h2 class="text-2xl font-bold text-white p-2" >Sign Up and GET 20% OFF for your first Order</h2>
-        <p id="closebtn" class="text-2xl font-bold text-white p-2">X</p>
+      <div id="popup" class="pop-up">
+        <h2>Sign Up and GET 20% OFF for your first Order</h2>
+        <p id="closebtn">X</p>
       </div>
     </section>
 
